objects/ASI_TH_CRM_Sub_category__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_CN_Chinese_Name__c</fullName>
        <label>Chinese Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Product_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Category</label>
        <referenceTo>ASI_HK_CRM_Product_Category__c</referenceTo>
        <relationshipLabel>Sub-categories</relationshipLabel>
        <relationshipName>Sub_categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category (TH)</label>
        <referenceTo>ASI_TH_CRM_Category__c</referenceTo>
        <relationshipLabel>Sub-categorys</relationshipLabel>
        <relationshipName>Sub_categorys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_English_Name__c</fullName>
        <label>English Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Sub_category_Code__c</fullName>
        <label>Sub-category Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Sub_category_EXID__c</fullName>
        <externalId>true</externalId>
        <label>Sub-category External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Sub-category</label>
    <listViews>
        <fullName>ASI_CRM_CN_sub_category</fullName>
        <columns>NAME</columns>
        <columns>ASI_TH_CRM_Sub_category_Code__c</columns>
        <columns>ASI_CRM_CN_Chinese_Name__c</columns>
        <columns>ASI_TH_CRM_English_Name__c</columns>
        <columns>ASI_TH_CRM_Sequence__c</columns>
        <columns>ASI_CRM_CN_Product_Category__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_TH_CRM_Sub_category_EXID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TH_CRM_Sub_category__c.ASI_CRM_CN_Sub_Category</value>
        </filters>
        <label>CN sub category</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_TW_Sub_cat</fullName>
        <columns>NAME</columns>
        <columns>ASI_TH_CRM_Sub_category_Code__c</columns>
        <columns>ASI_CRM_CN_Product_Category__c</columns>
        <columns>ASI_TH_CRM_English_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TH_CRM_Sub_category__c.ASI_CRM_TW_Sub_category</value>
        </filters>
        <label>TW CRM Sub-cat</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_TW_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_TW_Sub_categories</fullName>
        <columns>NAME</columns>
        <columns>ASI_TH_CRM_Sub_category_Code__c</columns>
        <columns>ASI_TH_CRM_Category__c</columns>
        <columns>ASI_CRM_CN_Product_Category__c</columns>
        <columns>ASI_TH_CRM_English_Name__c</columns>
        <columns>ASI_TH_CRM_Sequence__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TH_CRM_Sub_category__c.ASI_CRM_TW_Sub_category</value>
        </filters>
        <label>TW CRM Sub-categories</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_TW_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_TH_CRM_Sub_category_Code__c</columns>
        <columns>ASI_TH_CRM_Category__c</columns>
        <columns>ASI_CRM_CN_Product_Category__c</columns>
        <columns>ASI_TH_CRM_English_Name__c</columns>
        <columns>ASI_TH_CRM_Sequence__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_TH_CRM_sub_categories</fullName>
        <columns>NAME</columns>
        <columns>ASI_TH_CRM_Sub_category_Code__c</columns>
        <columns>ASI_TH_CRM_Category__c</columns>
        <columns>ASI_CRM_CN_Product_Category__c</columns>
        <columns>ASI_TH_CRM_English_Name__c</columns>
        <columns>ASI_TH_CRM_Sequence__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TH_CRM_Sub_category__c.ASI_TH_CRM_Sub_category</value>
        </filters>
        <label>All-TH CRM sub-categories</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TH_CRM_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_Sub_Categories</fullName>
        <columns>NAME</columns>
        <columns>ASI_TH_CRM_Sub_category_Code__c</columns>
        <columns>ASI_CRM_CN_Product_Category__c</columns>
        <columns>ASI_TH_CRM_English_Name__c</columns>
        <columns>ASI_TH_CRM_Sequence__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TH_CRM_Sub_category__c.ASI_CRM_CN_Sub_Category</value>
        </filters>
        <label>CN Sub-Categories</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Sub-category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sub-categories</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Sub_Category</fullName>
        <active>true</active>
        <label>CN Sub-Category</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_Sub_category</fullName>
        <active>true</active>
        <description>This is used by TW CRM</description>
        <label>TW Sub-category</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MY_Sub_category</fullName>
        <active>true</active>
        <label>MY Sub-category</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TH_CRM_Sub_category</fullName>
        <active>true</active>
        <label>ASI TH CRM Sub-category</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>